2015-09-03  Peter Stephenson  <p.stephenson@samsung.com>

	* 36416: Src/Zle/zle_refresh.c, Src/Zle/zle_utils.c: If
	keyboard interrupt during getzlequery(), don't propagate further,
	just redraw the line.  Also handle logical error that we
	attempted to redware the line partially if an error or interrupt
	was propagated.

2015-09-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36403: Src/hashtable.c Test/A02alias.ztst: type -w +=
	suffix alias

2015-09-02  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Test/A05execution.ztst: test for 36393

	* 36393: Src/signals.c: process queued signals during dotrap()

2015-09-02  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 36378: Src/exec.c: skip directories when looking for autoload
	files.

2015-09-02  Peter Stephenson  <p.stephenson@samsung.com>

	* 36399: Src/text.c, Test/A04redirect.ztst: shell code with
	multiple here documents wasn't shown properly.

2015-09-01  Mikael Magnusson  <mikachu@gmail.com>

	* 36380: Src/utils.c: Avoid gcc case syntax

	* 36347: Src/params.c, Test/A06assign.ztst: Fix appending empty
	array to associations

2015-09-01  Barton E. Schaefer  <schaefer@zsh.org>

	* 36376: Src/utils.c: handle signals during read1char() so it is
	possible to interrupt correct/correctall prompts

2015-09-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 36365: Src/Zle/zle_tricky.c: magic-space removed the rest of
	the line if the lexer found something complicated.

	* unposted: Config/version.mk: update version to 5.1-dev-0 to
	avoid clash with 5.1 release.

2015-09-01  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36353: Completion/Unix/Command/_git: _git: Unbreak after
	previous.

2015-08-30  Mateusz Karbowy  <mateusz.karbowy@gmail.com>

	* 36328 + 36340: Completion/Unix/Command/_git: _git-cherry-pick:
	Complete other branches only

2015-08-30  Axel Beckert  <abe@deuxchevaux.org>

	* 36338: Functions/Zle/*-magic: s/5.0.9/5.1/ in source comments
